gap fix events

--- a/app/assets/stylesheets/events/events.scss
+++ b/app/assets/stylesheets/events/events.scss
@@ -87,7 +87,7 @@
     margin-right: 15px;
     flex-direction: row;
     // text-align: center;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 .single-event-info {
